--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <div class="container-fluid" style="height: 170px;margin: 0;padding: 0; border: 2px solid black;">
-        <nav class="navbar navbar-expand-lg " style="height: 170px; background-color: rgb(70, 67, 66);">
+    <div class="container-fluid" style="height: 110px;margin: 0;padding: 0; position: static;top: 0;">
+        <nav class="navbar navbar-expand-lg " style="height: 100px;">
             <div class="container-fluid" style="z-index: 3;">
-                <a class="navbar-brand" href="#"><img src="./img/logo.jpeg" alt=""
-                        style="width:100px;height: 100px;border-radius: 50px;"></a>
+                <a class="navbar-brand" href="index.html"><img src="./img/logo.jpeg" alt=""
+                        style="width:80px;height: 80px;border-radius: 50px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -26,15 +26,26 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav" style="display: flex;gap: 50px; z-index: index 1;">
-                        <a class="nav-link active" aria-current="page" href="#" style="color: white;">Book Now</a>
-                        <a class="nav-link" href="#" style="color: white;">Life Style</a>
-                        <a class="nav-link" href="#" style="color: white;">Services</a>
-                        <a class="nav-link" href="#" style="color: white;">Pricing</a>
-                        <a class="nav-link" href="#" style="color: white;">Contact Us</a>
+                        <!-- <a class="nav-link active" aria-current="page" href="#" style="font-size: 25px;">Book Now</a> -->
+                        <a class="nav-link active" href="#" style="font-size: 25px;">Home</a>
+                        <a class="nav-link active" href="lifestyle.html" style="font-size: 25px;">Life Style</a>
+                        <!-- <a class="nav-link active" href="#" style="font-size: 25px;">Pricing</a> -->
+                        <a class="nav-link active" href="#" style="font-size: 25px;">Contact Us</a>
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 25px;">
+                            Pricing
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Basic Plan ($9.99)</a></li>
+                            <li><a class="dropdown-item" href="#">Premium Plan ($19.99)</a></li>
+                            <li><a class="dropdown-item" href="#">Enterprise Plan ($49.99)</a></li>
+                        </ul>
+
+                        
                     </div>
                 </div>
             </div>
-            <div class="scissor" style="display: flex;gap:30px;padding-right: 30px;font-size: 15px;z-index: 3">
+            <div class="scissor" style="display: flex;gap:30px;padding-right:30px;">
                 <img src="./logo/1.png" alt="">
                 <img src="./logo/2.png" alt="">
                 <img src="./logo/3.png" alt="">
@@ -45,17 +56,17 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="./img/a (2).jpeg" class="d-block w-100" alt="..." style="height: 900px;">
+                    <img src="./img/mg (9).JPG" class="d-block w-100" alt="..." style="height: 700px;">
                 </div>
                 <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="./img/sli (3).jpeg" class="d-block w-100" alt="..." style="height: 900px;">
+                    <img src="./img/mg (15).JPG" class="d-block w-100" alt="..." style="height: 700px;">
                 </div>
                 <div class="carousel-item" data-bs-interval="10000">
-                    <img src="./img/a (1).jpeg" class="d-block w-100" alt="..." style="height: 900px;">
+                    <img src="./img/mg (1).JPG" class="d-block w-100" alt="..." style="height: 700px;">
                 </div>
-                <div class="carousel-item">
-                    <img src="./img/a (3).jpeg" class="d-block w-100" alt="..." style="height: 900px;">
-                </div>
+                <!-- <div class="carousel-item">
+                    <img src="./img/mg (1).JPG" class="d-block w-100" alt="..." style="height: 700px;">
+                </div> -->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="prev">
@@ -69,14 +80,18 @@
             </button>
         </div>
     </div>
-    <div class="container mt-4">
-        <h1 style="font-size: 70px;text-align: center;font-family:'Times New Roman', Times, serif;">I'M IDEAL & CO.</h1>
+    <div class="container" style="margin-top: 70px;">
+        <h1 style="font-size: 70px;text-align: center;font-family:'Times New Roman', Times, serif;">WE're IDEAL & CO.
+        </h1>
         <p style="font-size: x-large;text-align: center;">Ideal & Co. Shop is a leading barber in Latifabad, Hyd. Since
-            its launch in 2010. <br>Sharp cuts, smooth shaves, and unforgettable experiences. <br> Visit our barber shop
+            its launch in 2008. <br>Sharp cuts, smooth shaves, and unforgettable experiences. <br> Visit our barber shop
             and discover a new you.Transform your look, <br> elevate your style. Our skilled barbers use only the best
             techniques and products. <br> Come see the difference.</p>
     </div>
-    <div class="container">
+    <div class="container" style="margin-top: 70px;">
+        <h2
+            style="text-align: center;font-size: 50px;padding-bottom: 10px;font-family:'Times New Roman', Times, serif;">
+            Comfort Is Our Priority.</h2>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
@@ -109,7 +124,7 @@
                     <div class="row row-cols-1 row-cols-md-2 g-4">
                         <div class="col">
                             <div class="card">
-                                <img src="./img/sli (3).jpeg" class="card-img-top" alt="...">
+                                <img src="./img/mg (13).JPG" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">IDEAL & CO.</h5>
                                     <p class="card-text">This is a longer card with supporting text below as a natural
@@ -119,7 +134,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/sli (4).jpeg" class="card-img-top" alt="...">
+                                <img src="./img/mg (11).JPG" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">IDEAL & CO.</h5>
                                     <p class="card-text">This is a longer card with supporting text below as a natural
@@ -129,81 +144,39 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <!-- <img src="..." class="d-block w-100" alt="..."> -->
-                    <div class="row row-cols-1 row-cols-md-2 g-4">
-                        <div class="col">
-                            <div class="card">
-                                <img src="./img/sli (5).jpeg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">IDEAL & CO.</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card">
-                                <img src="./img/sli (6).jpeg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">IDEAL & CO.</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="container" style="margin-top: 70px;">
+            <h1 style="text-align: center;font-size: 50px;margin-bottom: 30px;
+            font-optical-sizing: auto;margin-top: 10px;font-weight: bolder;">Grooming Essentials.</h1>
+            <div class="groom img-fluid" style="height: 700px; width: 1290px;">
+                <img src="./img/mg (4).JPG" alt="" style="height:700px; width: 1290px;">
+            </div>
+        </div>
+        <footer class="footer bg-light text-dark" style="height: 70px;margin-top: 70px;">
+            <div class="container-fluid" style="display: flex;justify-content:space-between;padding-top: 20px;">
+                <div class="syumbols" style="font-size: xx-large;display: flex;gap: 40px;">
+                    <a href="#"><i class="fa-brands fa-facebook" style="color: blue;"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram" style="color: red;"></i></a>
+                    <a href="https://wa.me/+923120573108"><i class="fa-brands fa-whatsapp" style="color:green;"></i></a>
+                </div>
+                <div class="cpright">
+                    <h5>©2025 IDEAL & CO. All Rights Reserved.</h5>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-    <div class="container mt-4">
-        <h1 style="text-align: center;font-size: 50px;font-family:Playwrite VN, serif;
-        font-optical-sizing: auto;margin-top: 40px;font-weight: bolder;">Cutting Styles.</h1>
-    <div class="cards" style="display: flex;height: 500px;justify-content: space-between;margin-top: 60px;">
-        <div class="card" style="width: 24rem;">
-            <img src="./img/9.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="card" style="width: 24rem;">
-            <img src="./img/10.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="card" style="width: 24rem;">
-            <img src="./img/11.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-    </div>
-</div>
-<footer class="footer bg-dark text-light" style="height: 70px;margin-top: 70px;">
-    <div class="container" style="display: flex;justify-content:space-between;align-items: center;padding-top: 20px;">
-        <div class="syumbols" style="font-size: xx-large;display: flex;gap: 40px;color: white;">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <a href="https://wa.me/+923120573108" style="text-decoration: none; color: white;"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-        <div class="cpright">
-            <h5>©2025 IDEAL & CO. All Rights Reserved.</h5>
-        </div>
-    </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
