--- a/index.html
+++ b/index.html
@@ -24,32 +24,31 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav" style="display: flex;gap: 50px; z-index: index 1;">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="background-color: rgb(0, 0, 0);border-radius: 10px;">
+                    <div class="navbar-nav" style="display: flex;gap: 50px; z-index: index 3;">
                         <!-- <a class="nav-link active" aria-current="page" href="#" style="font-size: 25px;">Book Now</a> -->
-                        <a class="nav-link active" href="#" style="font-size: 25px;">Home</a>
-                        <a class="nav-link active" href="lifestyle.html" style="font-size: 25px;">Life Style</a>
+                        <a class="nav-link active" href="#" style="font-size: 25px;color: rgb(255, 255, 255);">Home</a>
+                        <a class="nav-link active" href="lifestyle.html" style="font-size: 25px;color: white;">Life Style</a>
                         <!-- <a class="nav-link active" href="#" style="font-size: 25px;">Pricing</a> -->
-                        <a class="nav-link active" href="#" style="font-size: 25px;">Contact Us</a>
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 25px;">
+                        <a class="nav-link active" href="https://wa.me/+923133545590" style="font-size: 25px;color: white;">Contact Us</a>
+                        <a class="nav-link active" href="price.html" style="font-size: 25px;color: white;">Pricings</a>
+                        <!-- <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 25px;color: white;">
                             Pricing
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        </a> -->
+                        <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Basic Plan ($9.99)</a></li>
                             <li><a class="dropdown-item" href="#">Premium Plan ($19.99)</a></li>
                             <li><a class="dropdown-item" href="#">Enterprise Plan ($49.99)</a></li>
-                        </ul>
-
-                        
+                        </ul> -->
                     </div>
                 </div>
             </div>
-            <div class="scissor" style="display: flex;gap:30px;padding-right:30px;">
+            <!-- <div class="scissor" style="display: flex;gap:30px;padding-right:30px;">
                 <img src="./logo/1.png" alt="">
                 <img src="./logo/2.png" alt="">
                 <img src="./logo/3.png" alt="">
-            </div>
+            </div> -->
         </nav>
     </div>
     <div class="container-fluid" style="margin: 0;padding: 0;">
@@ -157,12 +156,16 @@
                 </button>
             </div>
         </div>
-        <div class="container" style="margin-top: 70px;">
-            <h1 style="text-align: center;font-size: 50px;margin-bottom: 30px;
-            font-optical-sizing: auto;margin-top: 10px;font-weight: bolder;">Grooming Essentials.</h1>
-            <div class="groom img-fluid" style="height: 700px; width: 1290px;">
-                <img src="./img/mg (4).JPG" alt="" style="height:700px; width: 1290px;">
+        <div class="container text-center">
+            <div class="row">
+              <div class="col-sm-12"><h1 style="text-align: center;font-size: 50px;margin-bottom: 30px;
+                  font-optical-sizing: auto;margin-top: 10px;font-weight: bolder;">Grooming Essentials.</h1>
+                <div class="card text-bg-dark">
+                    <img src="./img/mg (4).JPG" class="card-img" alt="...">
+                  </div>
+              </div>
             </div>
+        </div>
         </div>
         <footer class="footer bg-light text-dark" style="height: 70px;margin-top: 70px;">
             <div class="container-fluid" style="display: flex;justify-content:space-between;padding-top: 20px;">
@@ -172,7 +175,7 @@
                     <a href="https://wa.me/+923120573108"><i class="fa-brands fa-whatsapp" style="color:green;"></i></a>
                 </div>
                 <div class="cpright">
-                    <h5>©2025 IDEAL & CO. All Rights Reserved.</h5>
+                    <h5 style="margin-top: 10px;">©2025 IDEAL & CO. All Rights Reserved.</h5>
                 </div>
             </div>
         </footer>
