--- a/lifestyle.html
+++ b/lifestyle.html
@@ -26,8 +26,8 @@
                         <!-- <a class="nav-link active" aria-current="page" href="#" style="font-size: 25px;">Book Now</a> -->
                         <a class="nav-link" href="#" style="font-size: 25px;">Home</a>
                         <a class="nav-link" href="lifestyle.html" style="font-size: 25px;">Life Style</a>
-                        <a class="nav-link" href="#" style="font-size: 25px;">Pricing</a>
-                        <a class="nav-link" href="#" style="font-size: 25px;">Contact Us</a>
+                        <a class="nav-link" href="price.html" style="font-size: 25px;">Pricing</a>
+                        <a class="nav-link" href="https://wa.me/+923133545590" style="font-size: 25px;">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
     </div>
     <div class="container" style="margin-top: 70px;">
         <div class="card text-bg-dark">
-            <img src="./cuttings/cards (1).JPG" class="card-img" alt="..." style="height: 450px;">
+            <img src="./cuttings/do4.jpg" class="card-img" alt="..." style="height: 450px;">
             <!-- <div class="card-img-overlay">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -98,7 +98,7 @@
                 <a href="https://wa.me/+923120573108"><i class="fa-brands fa-whatsapp" style="color:green;"></i></a>
             </div>
             <div class="cpright">
-                <h5>©2025 IDEAL & CO. All Rights Reserved.</h5>
+                <h5 style="margin-top: 10px;">©2025 IDEAL & CO. All Rights Reserved.</h5>
             </div>
         </div>
     </footer>
