--- a/index.html
+++ b/index.html
@@ -27,47 +27,33 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="background-color: rgb(0, 0, 0);border-radius: 10px;">
                     <div class="navbar-nav" style="display: flex;gap: 50px; z-index: index 3;">
                         <!-- <a class="nav-link active" aria-current="page" href="#" style="font-size: 25px;">Book Now</a> -->
-                        <a class="nav-link active" href="#" style="font-size: 25px;color: rgb(255, 255, 255);">Home</a>
+                        <a class="nav-link active" href="index.html" style="font-size: 25px;color: rgb(255, 255, 255);">Home</a>
                         <a class="nav-link active" href="lifestyle.html" style="font-size: 25px;color: white;">Life Style</a>
                         <!-- <a class="nav-link active" href="#" style="font-size: 25px;">Pricing</a> -->
                         <a class="nav-link active" href="https://wa.me/+923133545590" style="font-size: 25px;color: white;">Contact Us</a>
-                        <a class="nav-link active" href="price.html" style="font-size: 25px;color: white;">Pricings</a>
-                        <!-- <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 25px;color: white;">
-                            Pricing
-                        </a> -->
-                        <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Basic Plan ($9.99)</a></li>
-                            <li><a class="dropdown-item" href="#">Premium Plan ($19.99)</a></li>
-                            <li><a class="dropdown-item" href="#">Enterprise Plan ($49.99)</a></li>
-                        </ul> -->
+                        <a class="nav-link active" href="price2.html" style="font-size: 25px;color: white;">Pricings</a>
                     </div>
                 </div>
             </div>
-            <!-- <div class="scissor" style="display: flex;gap:30px;padding-right:30px;">
-                <img src="./logo/1.png" alt="">
-                <img src="./logo/2.png" alt="">
-                <img src="./logo/3.png" alt="">
-            </div> -->
         </nav>
     </div>
     <div class="container-fluid" style="margin: 0;padding: 0;">
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="./img/mg (9).JPG" class="d-block w-100" alt="..." style="height: 700px;">
+                    <img src="./img/mg (9).JPG" class="d-block w-100" alt="..." style="height: 600px;">
                 </div>
                 <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="./img/mg (15).JPG" class="d-block w-100" alt="..." style="height: 700px;">
+                    <img src="./img/mg (15).JPG" class="d-block w-100" alt="..." style="height: 600px;">
                 </div>
                 <div class="carousel-item" data-bs-interval="10000">
-                    <img src="./img/mg (1).JPG" class="d-block w-100" alt="..." style="height: 700px;">
+                    <img src="./img/mg (1).JPG" class="d-block w-100" alt="..." style="height: 600px;">
                 </div>
                 <!-- <div class="carousel-item">
                     <img src="./img/mg (1).JPG" class="d-block w-100" alt="..." style="height: 700px;">
                 </div> -->
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -82,15 +68,15 @@
     <div class="container" style="margin-top: 70px;">
         <h1 style="font-size: 70px;text-align: center;font-family:'Times New Roman', Times, serif;">WE're IDEAL & CO.
         </h1>
-        <p style="font-size: x-large;text-align: center;">Ideal & Co. Shop is a leading barber in Latifabad, Hyd. Since
+        <p style="font-size: x-large;text-align: center;">Ideal & Co. Shop is a leading barber in Latifabad,   Hyd. Since
             its launch in 2008. <br>Sharp cuts, smooth shaves, and unforgettable experiences. <br> Visit our barber shop
             and discover a new you.Transform your look, <br> elevate your style. Our skilled barbers use only the best
             techniques and products. <br> Come see the difference.</p>
     </div>
     <div class="container" style="margin-top: 70px;">
-        <h2
-            style="text-align: center;font-size: 50px;padding-bottom: 10px;font-family:'Times New Roman', Times, serif;">
+        <h2 style="text-align: center;font-size: 50px;padding-bottom: 10px;font-family:'Times New Roman', Times, serif;">
             Comfort Is Our Priority.</h2>
+    </div>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
