--- a/lifestyle.html
+++ b/lifestyle.html
@@ -21,31 +21,23 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav" style="display: flex;gap: 50px; z-index: index 1;">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="background-color: rgb(0, 0, 0);border-radius: 10px;">
+                    <div class="navbar-nav" style="display: flex;gap: 50px; z-index: index 3;">
                         <!-- <a class="nav-link active" aria-current="page" href="#" style="font-size: 25px;">Book Now</a> -->
-                        <a class="nav-link" href="#" style="font-size: 25px;">Home</a>
-                        <a class="nav-link" href="lifestyle.html" style="font-size: 25px;">Life Style</a>
-                        <a class="nav-link" href="price.html" style="font-size: 25px;">Pricing</a>
-                        <a class="nav-link" href="https://wa.me/+923133545590" style="font-size: 25px;">Contact Us</a>
+                        <a class="nav-link active" href="index.html" style="font-size: 25px;color: rgb(255, 255, 255);">Home</a>
+                        <a class="nav-link active" href="lifestyle.html" style="font-size: 25px;color: white;">Life Style</a>
+                        <!-- <a class="nav-link active" href="#" style="font-size: 25px;">Pricing</a> -->
+                        <a class="nav-link active" href="https://wa.me/+923133545590" style="font-size: 25px;color: white;">Contact Us</a>
+                        <a class="nav-link active" href="price2.html" style="font-size: 25px;color: white;">Pricings</a>
                     </div>
                 </div>
             </div>
-            <div class="scissor" style="display: flex;gap:30px;padding-right:30px;">
-                <img src="./logo/1.png" alt="">
-                <img src="./logo/2.png" alt="">
-                <img src="./logo/3.png" alt="">
-            </div>
         </nav>
     </div>
+    <!-- Image Div Starts Here -->
     <div class="container" style="margin-top: 70px;">
         <div class="card text-bg-dark">
-            <img src="./cuttings/do4.jpg" class="card-img" alt="..." style="height: 450px;">
-            <!-- <div class="card-img-overlay">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small>Last updated 3 mins ago</small></p>
-            </div> -->
+            <img src="./img/mg (10).JPG" class="card-img" alt="..." style="height: 450px;object-fit:fill;">
         </div>
     </div>
     <div class="container" style="margin-top: 70px; text-align: center;">
