--- a/price2.html
+++ b/price2.html
@@ -111,7 +111,7 @@
         <table class="table-responsive w-100" style="font-weight: normal !important;">
             <thead>
                 <tr>
-                    <th scope="col" class="col-sm-3" style="font-size: x-large;font-weight:bolder;">REGULAR</th>
+                    <th scope="col" class="col-sm-3" style="font-size:x-large;font-weight:bolder;">REG</th>
                     <th scope="col" class="col-sm-3">PREMIER</th>
                     <th scope="col" class="col-sm-3">PLATINUM</th>
                     <th scope="col" class="col-sm-3">BIO</th>
@@ -125,7 +125,7 @@
                     <td>12500</td>
                 </tr>
                 <tr>
-                    <th scope="row">Beard Reshaping</th>
+                    <th scope="row">Beard shaping</th>
                     <td>1450</td>
                     <td>5500</td>
                     <td>12500</td>
@@ -137,28 +137,28 @@
                     <td>12500</td>
                 </tr>
                 <tr>
-                    <th scope="row">Cheek Hair Removal</th>
+                    <th scope="row">Cheek H.Rem</th>
                     <td>1450</td>
                     <td>5500</td>
                     <td>12500</td>
                 </tr>
                 <tr>
-                    <th scope="row">Eyebrow Reshaping</th>
+                    <th scope="row">Eyebrow shaping</th>
                     <td>1450</td>
                     <td>5500</td>
                     <td>12500</td>
                 </tr>
                 <tr>
-                    <th scope="row">Ear Hair Removal</th>
+                    <th scope="row">Ear H.Remo</th>
                     <td>2150</td>
                     <td>3250</td>
                     <td>5800</td>
                 </tr>
                 <tr>
-                    <th scope="row">Neckline Hair Removal</th>
-                    <td>–</td>
+                    <th scope="row">Neck H.Remov</th>
+                    <td>500</td>
                     <td>5300</td>
-                    <td>–</td>
+                    <td>900</td>
                 </tr>
                 <tr>
                     <th scope="row">Shower</th>
